force-app/main/default/objects/clofor_com_cfs__ServiceMaster__c/clofor_com_cfs__ServiceMaster__c.object-meta.xml
<CustomObject>
    <label>SVC Line</label>
    <nameField>
        <displayFormat>SM-{000000}</displayFormat>
        <label>SERVICE ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SVC Line</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>