force-app/main/default/objects/clofor_com_cfs__ServiceMaster__c/fields/clofor_com_cfs__MinSellingUnitPriceUSD__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__MinSellingUnitPriceUSD__c</fullName>
    <label>MIN SELLING UNIT PRICE(USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>