force-app/main/default/objects/clofor_com_cfs__ServiceMaster__c/fields/clofor_com_cfs__ParentServiceID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ParentServiceID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PARENT SERVICE ID</label>
    <referenceTo>clofor_com_cfs__ServiceMaster__c</referenceTo>
    <relationshipLabel>CHILD SERVICE</relationshipLabel>
    <relationshipName>ParentServiceID</relationshipName>
    <type>Lookup</type>
</CustomField>