force-app/main/default/objects/clofor_com_cfs__ServiceMaster__c/fields/clofor_com_cfs__ServiceName__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ServiceName__c</fullName>
    <label>SERVICE NAME</label>
    <length>100</length>
    <type>Text</type>
</CustomField>