force-app/main/default/objects/clofor_com_cfs__ServiceMaster__c/fields/clofor_com_cfs__ServicePhoto__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ServicePhoto__c</fullName>
    <label>SERVICE PHOTO</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>