force-app/main/default/objects/clofor_com_cfs__ServiceMaster__c/fields/clofor_com_cfs__StandardMarginRate__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__StandardMarginRate__c</fullName>
    <label>STANDARD MARGIN RATE%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>