force-app/main/default/objects/clofor_com_cfs__ServiceMaster__c/fields/clofor_com_cfs__StandardSellingUnitPriceLocal__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__StandardSellingUnitPriceLocal__c</fullName>
    <label>STANDARD SELLING UNIT PRICE(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>