force-app/main/default/objects/clofor_com_cfs__ServiceMaster__c/recordTypes/clofor_com_cfs__LogisticService.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__LogisticService</fullName>
    <active>true</active>
    <label>Logistic Service</label>
</RecordType>