force-app/main/default/objects/clofor_com_cfs__ServiceMaster__c/recordTypes/clofor_com_cfs__ServiceRelatedWithProduct.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__ServiceRelatedWithProduct</fullName>
    <active>true</active>
    <label>Service Related with Product</label>
</RecordType>