force-app/main/default/objects/clofor_com_cfs__ServiceMaster__c/listViews/clofor_com_cfs__All.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>clofor_com_cfs__ServiceName__c</columns>
    <columns>clofor_com_cfs__ServiceProviderVendor__c</columns>
    <columns>clofor_com_cfs__Quantity__c</columns>
    <columns>clofor_com_cfs__BuyingUnitPriceLocal__c</columns>
    <columns>clofor_com_cfs__BuyingUnitPriceUSD__c</columns>
    <columns>clofor_com_cfs__StandardMarginRate__c</columns>
    <columns>clofor_com_cfs__StandardSellingUnitPriceLocal__c</columns>
    <columns>clofor_com_cfs__StandardSellingUnitPriceUSD__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>